feat(#3603): added syntax sugar for phi applications